Fixed invalid Credentials not showing with Msg

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,6 +5,6 @@
 }
 
 .block {
-  width: 50%;
+  width: 30%;
   margin-right: 2rem;
 }
